--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Start Page</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    </head>
-    <body>
-        <h1>Hello World!</h1>
-    </body>
-</html>
+<html lang="es">
+    <html>
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <link rel="icon" href="sources\brand.png" type="image/icon type">
+            <title>Home | Sanx Portafolio</title>
+            <script src="index.js" type="text/javascript"></script>
+            <!--FONT ROBOTO-->
+            <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,400&display=swap"
+                  rel="stylesheet">
+            <!--CUSTOM CSS-->
+            <link rel="stylesheet" href="styles.css">
+        </head>
+        <body>
+            <div class="box">
+                <h1>Login</h1>
+                <form>
+                    <p>Username </p> <input type="text" name="username" id="username"> <br><br>
+                    <p>Password </p> <input type="text" name="password" id="password"> <br><br>
+                    <a href="signUp.html" class="button">Ingresar!</a>
+                </form>
+            </div>
+            <div class="box">
+                <h2>No tienes una cuenta?, crea una ya!</h2> <br>
+                <p>Username </p> <input type="text" name="username" id="username"> <br><br>
+                <p>Password </p> <input type="text" name="password" id="password"> <br><br>
+                <p>Confirm</p> <input type="text" name="confirm" id="confirm"> <br><br>
+                <a href="signUp.html" class="button">Registro!</a>  
+            </div>
+        <body>
+    </html>
