--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,9 +4,7 @@
         <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <link rel="icon" href="sources\brand.png" type="image/icon type">
-            <title>Home | Sanx Portafolio</title>
-            
+            <title>Login | Magic-8</title>
             <!--FONT ROBOTO-->
             <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,400&display=swap"
                   rel="stylesheet">
@@ -25,11 +23,10 @@
             <div class="box">
                 <h2>No tienes una cuenta?, crea una ya!</h2> <br>
                 <form  id="formu" class="formulario" name="formu" method="post" action="servicioLogin"  >
-                <p>Username </p> <input type="text" name="username" id="username"> <br><br>
-                <p>Password </p> <input type="text" name="password" id="password"> <br><br>
-                <p>Confirm</p> <input type="text" name="confirm" id="confirm"> <br><br>
-               <button type="submit" class="button" > Enviar</button>
-
+                    <p>Username </p> <input type="text" name="username" id="username"> <br><br>
+                    <p>Password </p> <input type="text" name="password" id="password"> <br><br>
+                    <p>Confirm</p> <input type="text" name="confirm" id="confirm"> <br><br>
+                    <button type="submit" class="button" > Enviar</button>
                 </form>
             </div>
             <script src="login.js" type="text/javascript"></script>
