--- a/src/main/webapp/magic.html
+++ b/src/main/webapp/magic.html
@@ -24,5 +24,6 @@ and open the template in the editor.
                 <button type="submit" class="button" > Preguntar</button>
             </form>
         </div>
+        <script src="login.js" type="text/javascript"></script>
     </body>
 </html>
