solucio to rapida

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,7 +14,7 @@
         <body>
             <div class="box">
                 <h1>Login</h1>
-                <form id="formu" class="formulario" name="formu" method="post" action="servicioGetIn" >
+                <form  class="formulario" name="formuLogin" method="post" action="servicioGetIn" >
                     <p>Username </p> <input type="text" name="user" id="user"> <br><br>
                     <p>Password </p> <input type="text" name="pass" id="pass"> <br><br>
                     <button type="submit" class="button" > Ingresar</button>
