Comprueba usuario uwu

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -27,7 +27,7 @@
                     <p id="available">Digite un usuario</p>
                     <p>Password </p> <input type="text" name="password" id="password"> <br><br>
                     <p>Confirm</p> <input type="text" name="confirm" id="confirm"> <br><br>
-                    <button type="submit" class="button" > Enviar</button>
+                    <button type="submit" class="button" name="botonSub" id="botonSub" > Enviar</button>
 
                 </form>
             </div>
